--- a/proof_of_concept.ipynb
+++ b/proof_of_concept.ipynb
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 24,
       "metadata": {
         "id": "MWDEeiAH3pQJ"
       },
@@ -103,7 +103,7 @@
         "\n",
         "#TODO -  Add In Azure ML OpenAI\n",
         "\n",
-        "client = OpenAI(api_key = \"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\")\n",
+        "client = OpenAI(api_key = \"OPEN_AI_API_KEY\")\n",
         "\n",
         "#Load in the data. In Azure ML platform, data stores can be accessed with a block of pre-generated code referencing workspace and loads data in one dataframe\n",
         "#Since we\"re working in a generic Python notebook, we\"ll just load in from a given directory\n",
@@ -766,7 +766,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx4wtutimXnNA5Ekh9JX9L",
+      "authorship_tag": "ABX9TyNJRzLoaCKzoWFg4lBppJ5I",
       "include_colab_link": true
     },
     "kernelspec": {
